--- a/Halloween Game/Views/Admin/Index.cshtml
+++ b/Halloween Game/Views/Admin/Index.cshtml
@@ -72,9 +72,9 @@
             <div class="col-xs-6">
                 <div class="btn-group btn-group-vertical btn-group-sm ">
                     <a href="/Central" class="btn btn-default" target="_blank">Central Display</a>
-                    <a href="/Team?team=ccc" class="btn btn-default" target="_blank">CCC Team</a>
-                    <a href="/Team?team=ddd" class="btn btn-default" target="_blank">DDD Team</a>
-                    <a href="/Team?team=eee" class="btn btn-default" target="_blank">EEE Team</a>
+                    <a href="/Team?team=be" class="btn btn-default" target="_blank">BE Kiosk</a>
+                    <a href="/Team?team=pn" class="btn btn-default" target="_blank">PN Kiosk</a>
+                    <a href="/Team?team=sd" class="btn btn-default" target="_blank">SD Kiosk</a>
                 </div>        
             </div>
             <div class="col-xs-6">
