--- a/Halloween Game/Views/Team/Index_Running.cshtml
+++ b/Halloween Game/Views/Team/Index_Running.cshtml
@@ -26,27 +26,34 @@
 </style>
 
 <div class="text-center" style="color: #fff; margin-top:100px;">
-    <h1 class="font-@Model.id">@Model.name</h1>
 
-    <p>To join this faction, enter this url in your mobile device's browser and then enter the four-character code below.</p>
+    <!-- this is here so that we can scroll down a bit and make the url bar dissappear in a tablet browser -->
+    <div style="height:400px;"></div>
 
-    <h3>http://@(Request.Url.Authority)/</h3>
+    <h1 class="font-@Model.id" style="margin-bottom:50px;">@Model.name</h1>
+
+    <p style="font-size:1.5em;" >To join this faction, enter this url in your mobile device's browser and then enter the four-digit code below.</p>
+
+    <h2>http://@(Request.Url.Authority)/</h2>
 
     <h2><code>@Model.JoinCode</code></h2>
 
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="4500">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="5500" style="margin-top: 40px;">
         <div class="carousel-inner" role="listbox">
             @{ bool active = false; }
             @foreach (string line in System.IO.File.ReadAllLines(Server.MapPath("~/App_Data/" + Model.id + " history.txt"))) {
                 <div class="item @(!active ? "active" : "")">
                     <div class="row history">
-                        <div class="col-xs-2 @(Model.id == "ddd" ? "font-central" : "font-" + Model.id) year">@line.Split(',')[0]</div>
-                        <div class="col-xs-10">@line.Split(new char[] { ',' }, 2)[1]</div>
+                        <div class="col-xs-3 font-@(Model.id) year">@line.Split(',')[0]</div>
+                        <div class="col-xs-9">@line.Split(new char[] { ',' }, 2)[1]</div>
                     </div>
                 </div>
                 active = true;
             }
         </div>
     </div>
+
+    <div style="height:200px;"></div>
+
 </div>
 
