--- a/Halloween Game/Views/Team/Index_Running.cshtml
+++ b/Halloween Game/Views/Team/Index_Running.cshtml
@@ -30,7 +30,9 @@
     <!-- this is here so that we can scroll down a bit and make the url bar dissappear in a tablet browser -->
     <div style="height:400px;"></div>
 
-    <h1 class="font-@Model.id" style="margin-bottom:50px;">@Model.name</h1>
+    <h1 class="font-@Model.id" style="margin-bottom:30px;">@Model.name</h1>
+
+    <div class="text-center" style="margin-bottom:30px;"><img src="~/Content/logo bw @(Model.id).png" class="" /></div>
 
     <p style="font-size:1.5em;" >To join this faction, enter this url in your mobile device's browser and then enter the four-digit code below.</p>
 
@@ -53,7 +55,7 @@
         </div>
     </div>
 
-    <div style="height:200px;"></div>
+    <div style="height:40px;"></div>
 
 </div>
 
