added player goals to admin

--- a/Halloween Game/Views/Admin/Modal_Team.cshtml
+++ b/Halloween Game/Views/Admin/Modal_Team.cshtml
@@ -68,6 +68,13 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="goal" class="control-label col-sm-3">Goal</label>
+                    <div class="col-sm-9">
+                        <input type="text" id="goal" name="goal" value="@Model.goal" class="form-control" />
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <label for="score" class="control-label col-sm-3">Score</label>
                     <div class="col-sm-3">
                         <input type="number" id="score" name="score" value="@Model.score" class="form-control" />
