--- a/Halloween Game/Views/Player/Index_None.cshtml
+++ b/Halloween Game/Views/Player/Index_None.cshtml
@@ -16,12 +16,12 @@
 }
 
 <div class="text-center">
-    <h1 class="font-central " style="margin-bottom: 20px;">Off-World Mining</h1>
+    <h1 class="font-central " style="margin-bottom: 20px;">Pan Galactic Technology Summit</h1>
 
     <h1><span class="glyphicon glyphicon-globe"></span></h1>
 
     <p class="lead">
-        Intersted in the glamourous lifestyle that is off-world mining?
+        Brought to you by FluxCorp!
     </p>
     <p class="lead">
         Visit one of the several recruitment stations conveniently located in your local system.
