--- a/Halloween Game/Views/Team/Index_Running.cshtml
+++ b/Halloween Game/Views/Team/Index_Running.cshtml
@@ -34,6 +34,8 @@
 
     <div class="text-center" style="margin-bottom:30px;"><img src="~/Content/logo bw @(Model.id).png" class="" /></div>
 
+    <p style="font-size:1.3em;  text-align: justify;">@Model.description</p>
+    <hr />
     <p style="font-size:1.5em;" >To join this faction, enter this url in your mobile device's browser and then enter the four-digit code below.</p>
 
     <h2>http://@(Request.Url.Authority)/</h2>
